manifests/showks-canvas-jumpyoshim/manifest.yaml
---
# Source: showks-canvas/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showks-canvas-jumpyoshim
  namespace: showks
  labels:
    app: showks-canvas-jumpyoshim
    class: showks-canvas
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: app-port
  selector:
    app: showks-canvas-jumpyoshim

---
# Source: showks-canvas/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showks-canvas-jumpyoshim
  namespace: showks
  labels:
    app: showks-canvas-jumpyoshim
    class: showks-canvas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: showks-canvas-jumpyoshim
  template:
    metadata:
      labels:
        app: showks-canvas-jumpyoshim
        class: showks-canvas
    spec:
      containers:
        - name: showks-canvas-jumpyoshim
          image: gcr.io/ipc-containerdays/showks-canvas-jumpyoshim:prod-1be1155a0fc833ca4b8e54ca72d2e3c4ce571c5f
          ports:
            - name: app-port
              containerPort: 8080
              protocol: TCP

---
# Source: showks-canvas/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: showks-canvas-jumpyoshim
  namespace: showks
  labels:
    class: showks-canvas
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "showks-canvas-jumpyoshim"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - showks-canvas-jumpyoshim.prod.showks.containerdays.jp
      secretName: tls-certificate
  rules:
  - host: showks-canvas-jumpyoshim.prod.showks.containerdays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: showks-canvas-jumpyoshim
          servicePort: 8080
